--- a/src/CSS/navbar.css
+++ b/src/CSS/navbar.css
@@ -1,7 +1,7 @@
 nav {
     width: 100%;
     position: fixed;
-    top: 0;
+    top: 0.5rem;
     left: 0;
     z-index: 5;
 }
